fix: collect streams using Collectors.toList
Java 8 does not have Stream::toList.