@@ -1,6 +1,7 @@
 package io.weaviate.client.v1.users.api;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import io.weaviate.client.v1.rbac.api.WeaviateRole;
 import io.weaviate.client.v1.users.model.User;
@@ -11,6 +12,6 @@ public class WeaviateUser {
   List<WeaviateRole> roles;
 
   public User toUser() {
-    return new User(name, id, roles.stream().map(WeaviateRole::toRole).toList());
+    return new User(name, id, roles.stream().map(WeaviateRole::toRole).collect(Collectors.toList()));
   }
 }
